--- a/src/app/filter/filter.component.css
+++ b/src/app/filter/filter.component.css
@@ -1,19 +1,35 @@
-h3{
+h3 {
      color: #239B73;
      font-weight: bold;
 }
-.serach_button{
+
+.serach_button {
      font-weight: bold;
      background-color: white;
      color: #239B73;
      width: 210px;
-     font-size:clamp(16px,1.5vw,20px);
+     font-size: clamp(16px, 1.5vw, 20px);
      border: 2px solid #239B73;
 }
-.serach_button:hover{
+
+.serach_button:hover {
      font-weight: bold;
      background-color: #239B73;
      color: white;
 
 }
 
+.btn-success {
+     width: 210px;
+     font-weight: bold;
+     border: none;
+     color: #239B73;
+     background-color: #E6E6E6;
+}
+.birth_year{
+      background-color: #239B73;
+      color: white;
+      width: 210px; text-align: center;
+      border-radius: 5px;
+      font-weight: bold;
+}
